Prevent Join Table link text from wrapping

--- a/client/poker/src/app/table/player/player.component.scss
+++ b/client/poker/src/app/table/player/player.component.scss
@@ -5,6 +5,7 @@
 	padding: 10px;
 	border: solid #eee;
 	border-radius: 6px;
+	white-space: nowrap;
 	
 	&.sitting-out,
 	&.empty {
